--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,36 +1,30 @@
 steps:
+  # Fetch secret from Secret Manager
+  - name: 'gcr.io/cloud-builders/gcloud'
+    args: ['secrets', 'versions', 'access', 'latest', '--secret', 'firebase-service-account', '--out-file', '/workspace/secrets/firebase-service-account.json']
 
-# Step 1: Build Angular app
-- name: 'gcr.io/cloud-builders/npm'
-  dir: 'Frontend'
-  args: ['install']
+  # Build Angular app
+  - name: 'gcr.io/cloud-builders/npm'
+    dir: 'Frontend'
+    args: ['install']
 
-- name: 'gcr.io/cloud-builders/npm'
-  dir: 'Frontend'
-  args: ['run', 'build', '--', '--configuration=production']
+  - name: 'gcr.io/cloud-builders/npm'
+    dir: 'Frontend'
+    args: ['run', 'build', '--', '--configuration=production']
 
-# Step 2: Deploy backend to App Engine
-- name: 'gcr.io/cloud-builders/gcloud'
-  dir: 'Backend'
-  args: ['app', 'deploy', '--quiet']
+  # Deploy Angular app to Cloud Run
+  - name: 'gcr.io/cloud-builders/gcloud'
+    args: [
+      'run', 'deploy', 'leave-management-frontend',
+      '--source=Frontend/dist/leave-management-frontend',
+      '--platform', 'managed',
+      '--region', 'us-central1',
+      '--allow-unauthenticated'
+    ]
 
-# Step 3: Build Docker image and push to GCR
-- name: 'gcr.io/cloud-builders/docker'
-  dir: 'Backend'
-  args: ['build', '-t', 'gcr.io/$PROJECT_ID/leave-management-backend', '.']
+  # Deploy FastAPI backend to App Engine
+  - name: 'gcr.io/cloud-builders/gcloud'
+    dir: 'Backend/app'
+    args: ['app', 'deploy', '--quiet']
 
-- name: 'gcr.io/cloud-builders/docker'
-  args: ['push', 'gcr.io/$PROJECT_ID/leave-management-backend']
-
-# Step 4: Deploy to Cloud Run
-- name: 'gcr.io/cloud-builders/gcloud'
-  args: [
-    'run', 'deploy', 'leave-management-backend',
-    '--image', 'gcr.io/$PROJECT_ID/leave-management-backend',
-    '--platform', 'managed',
-    '--region', 'us-central1',
-    '--allow-unauthenticated'
-  ]
-
-images:
-- gcr.io/$PROJECT_ID/leave-management-backend
+timeout: 900s
